--- a/docker/portainer-compose.yml
+++ b/docker/portainer-compose.yml
@@ -6,13 +6,31 @@ services:
     hostname: wapes-portainer
     networks:
       - default
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints: [node.role == manager]
     ports:
       - 9000:9000
+      - 8000:8000
     volumes:
       - portainer:/data:z
       - ./portainer/ssl:/certs:z
       - /var/run/docker.sock:/var/run/docker.sock
-    command: --ssl --sslcert /certs/portainer.crt --sslkey /certs/portainer.key --no-analytics
+    command: --ssl --sslcert /certs/portainer.crt --sslkey /certs/portainer.key --no-analytics -H tcp://tasks.agent:9001 --tlsskipverify
+
+  agent:
+    image: portainer/agent:latest
+    networks:
+      - default
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/docker/volumes:/var/lib/docker/volumes
+    deploy:
+      mode: global
+      placement:
+        constraints: [node.platform.os == linux]
 
 volumes:
   portainer:
