--- a/docker-compose-portainer.yml
+++ b/docker-compose-portainer.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 
 services:
-  portainer:
+  app:
     image: portainer/portainer:latest
     hostname: wapes-portainer
     networks:
