--- a/docker-compose-wapes.yml
+++ b/docker-compose-wapes.yml
@@ -10,6 +10,7 @@ services:
       - 53:53/tcp
       - 53:53/udp
       - 853:853/tcp
+      - 3000:3000/tcp
     volumes:
       - adguard:/opt/adguardhome/work:z
       - adguard:/opt/adguardhome/conf:z
