--- a/docker-compose-wapes.yml
+++ b/docker-compose-wapes.yml
@@ -1,15 +1,15 @@
 version: '3.5'
 
 services:
-  dns:
+  adguardhome:
     image: adguard/adguardhome:latest
-    hostname: wapes-adguardhome
+    hostname: wapes-adguard
     networks:
       - default
     ports:
-      - 53:53/tcp
-      - 53:53/udp
-      - 853:853/tcp
+#      - 53:53/tcp
+#      - 53:53/udp
+#      - 853:853/tcp
       - 3000:3000/tcp
     volumes:
       - adguard:/opt/adguardhome/work:z
@@ -173,19 +173,19 @@ services:
     volumes:
       - owncloud_mariadb:/var/lib/mysql
     
-#  pihole:
-#    image: pihole/pihole:latest
-#    hostname: wapes-pihole
-#    networks:
- #     - default
-#    environment:
-#      - TZ=Etc/UTC
-#    ports:
-#      - 53:53/tcp
-#      - 53:53/udp
-#    volumes:
-#      - pihole:/etc/pihole:z
-#      - pihole_dnsmasq:/etc/dnsmasq.d:z
+  pihole:
+    image: pihole/pihole:latest
+    hostname: wapes-pihole
+    networks:
+      - default
+    environment:
+      - TZ=Etc/UTC
+    ports:
+      - 53:53/tcp
+      - 53:53/udp
+    volumes:
+      - pihole:/etc/pihole:z
+      - pihole_dnsmasq:/etc/dnsmasq.d:z
     
   rocketchat:
     image: registry.rocket.chat/rocketchat/rocket.chat:latest
