--- a/nginx/conf.d/wapes.adguard.conf
+++ b/nginx/conf.d/wapes.adguard.conf
@@ -1,7 +1,7 @@
 server {
 		listen		443 ssl http2;
 		listen		[::]:443 ssl http2;
-		server_name dns.DOMAINNAME;
+		server_name adguard.DOMAINNAME;
 
 		# Certs sent to the client in SERVER HELLO are concatenated in ssl_certificate	
 		ssl_certificate			/etc/nginx/wapes.crt;
@@ -26,13 +26,13 @@ server {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://wapes_dns:3000/;
+			proxy_pass http://wapes-adguard:3000/;
 		}
 		
 		location / {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
 			proxy_set_header X-Real-IP $remote_addr;
-			proxy_pass http://wapes_dns/;
+			proxy_pass http://wapes-adguard/;
 		}
 	}
