--- a/docker-compose-wapes.yml
+++ b/docker-compose-wapes.yml
@@ -7,14 +7,16 @@ services:
     networks:
       - default
     ports:
-#      - 53:53/tcp
-#      - 53:53/udp
-#      - 853:853/tcp
       - 3000:3000/tcp
     volumes:
       - adguard:/opt/adguardhome/work:z
       - adguard:/opt/adguardhome/conf:z
-    
+      
+  cyberchef:
+    image: mpepping/cyberchef:latest
+    hostname: wapes-cyberchef
+    networks:
+      - default
 
   dokuwiki:
     image: ghcr.io/linuxserver/dokuwiki:latest
