--- a/docker-compose-portainer.yml
+++ b/docker-compose-portainer.yml
@@ -3,7 +3,7 @@ version: '3.5'
 services:
   app:
     image: portainer/portainer:latest
-    hostname: wapes-portainer
+    hostname: cip-portainer
     networks:
       - default
     deploy:
@@ -38,4 +38,4 @@ volumes:
 networks:
   default:
     external: true
-    name: wapes_default
+    name: cip_default
