more name changes

--- a/nginx/virtual_host_template.conf
+++ b/nginx/virtual_host_template.conf
@@ -4,15 +4,15 @@ server {
 		server_name SOMETHING.DOMAINNAME;
 
 		# Certs sent to the client in SERVER HELLO are concatenated in ssl_certificate	
-		ssl_certificate			/etc/nginx/wapes.crt;
-		ssl_certificate_key		/etc/nginx/wapes.key;
+		ssl_certificate			/etc/nginx/cip.crt;
+		ssl_certificate_key		/etc/nginx/cip.key;
 		ssl_session_timeout     1d;
 		ssl_session_cache       shared:SSL:50m;
 		ssl_session_tickets     off;
 
 		# Logging section - tweak as needed	
-		access_log		/var/log/nginx/wapes_SOMETHING.access.log;
-		error_log		/var/log/nginx/wapes_SOMETHING.error.log;
+		access_log		/var/log/nginx/cip_SOMETHING.access.log;
+		error_log		/var/log/nginx/cip_SOMETHING.error.log;
 
 		# Modern Configuration.  Tweak as needed.  mozilla.github.io/server-side-tls/ssl-config-generator/
 		ssl_protocols           TLSv1.2;
