--- a/docker-compose.traefik.yml
+++ b/docker-compose.traefik.yml
@@ -9,15 +9,16 @@ services:
     ports:
       - 80:80
       - 443:443
+      - 8080:8080
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./traefik-data/traefik.yml:/traefik.toml:ro
-      - ./traefik-data/configurations:/configurations
+      - ./traefik/traefik.toml:/traefik.toml:ro
+      - ./traefik/configurations:/configurations
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=cip_default"
-      - "traefik.http.routers.traefik-secure.entrypoints=websecure"
+      - "traefik.http.routers.traefik-secure.entrypoints=https"
       - "traefik.http.routers.traefik-secure.rule=Host(`traefik.cip.local`)"
       - "traefik.http.routers.traefik-secure.middlewares=user-auth@file"
       - "traefik.http.routers.traefik-secure.service=api@internal"
